<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play"
        android:enabled="true"
        android:icon="@drawable/ic_play"
        android:title="@string/play"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_leaderboard"
        android:enabled="true"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/leaderboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>